--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@ var _hmt = _hmt || [];
 </div>
 
         <div class="buttons">
-            <a class="button" href="posts/blog" rel="noopener" title="🧱 建站">
+            <a class="button" href="posts/blog" rel="noopener" title="🧱 逆向">
             <span class="button-inner">
-                    🧱 建站
+                    🧱 逆向
                 </span>
             </a>
             <a class="button" href="posts/tech" rel="noopener" title="👨🏻‍💻 技术">
@@ -239,9 +239,9 @@ var _hmt = _hmt || [];
                     👨🏻‍💻 技术
                 </span>
             </a>
-            <a class="button" href="posts/read" rel="noopener" title="📕 阅读">
+            <a class="button" href="posts/read" rel="noopener" title="📕 审计">
             <span class="button-inner">
-                    📕 阅读
+                    📕 审计
                 </span>
             </a>
             <a class="button" href="posts/life" rel="noopener" title="🏖 生活">
