--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@ var _hmt = _hmt || [];
                     📕 审计
                 </span>
             </a>
-            <a class="button" href="posts/life" rel="noopener" title="🏖 生活">
+            <a class="button" href="posts/pwn" rel="noopener" title="🏖 pwn">
             <span class="button-inner">
-                    🏖 生活
+                    🏖 pwn
                 </span>
             </a>
         </div>
